--- a/Task/Task 4/index.html
+++ b/Task/Task 4/index.html
@@ -7,9 +7,14 @@
 </head>
 <body>
     <script>
-
-
-
+    // print odd numbers in an array
+    (function(arr) {
+  for (let i = 0; i < arr.length; i++) {
+    if (arr[i] % 2 !== 0) {
+      console.log(arr[i]);
+    }
+  }
+})([1, 2, 3, 4, 5, 6, 7, 8, 9]); // Output: 1, 3, 5, 7, 9
     </script>
 </body>
 </html>
