--- a/Task/Task 4/index1.html
+++ b/Task/Task 4/index1.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
     <title>Task 4</title>
-</head>
-<body>
+  </head>
+  <body>
+    <h1>Task 4</h1>
     <script>
-    // print odd numbers in an array
-    (function(arr) {
-  for (let i = 0; i < arr.length; i++) {
-    if (arr[i] % 2 !== 0) {
-      console.log(arr[i]);
-    }
-  }
-})([1, 2, 3, 4, 5, 6, 7, 8, 9]); // Output: 1, 3, 5, 7, 9
+      // print odd numbers in an array
+      (function (arr) {
+        for (let i = 0; i < arr.length; i++) {
+          if (arr[i] % 2 !== 0) {
+            console.log(arr[i]);
+          }
+        }
+      })([1, 2, 3, 4, 5, 6, 7, 8, 9]); 
     </script>
-</body>
+  </body>
 </html>
