--- a/Task/Task 4/index1.html
+++ b/Task/Task 4/index1.html
@@ -6,7 +6,7 @@
   <body>
     <h1>Task 4</h1>
     <script>
-      // print odd numbers in an array
+      // print odd numbers in an array using IIFE
       (function (arr) {
         for (let i = 0; i < arr.length; i++) {
           if (arr[i] % 2 !== 0) {
