--- a/Task/Task 4/index1A.html
+++ b/Task/Task 4/index1A.html
@@ -7,14 +7,15 @@
     <h1>Task 4</h1>
     <script>
       // print odd numbers in an array using anonymous
-      array = [1,2,3,4,5,6,7,8,9,10];
-      function(array){
+     
+      let oddnum = function(array){
                   for(var i = 0 ; i< array.length ; i++){
                         if(array[i]%2!=0){
                            console.log(array[i])
                         }
                    }
-                }();
+                }
+                oddnum([1,2,3,4,5,6,7,8,9,10]);
 
                
 
