--- a/Task/Task 4/index2a.html
+++ b/Task/Task 4/index2a.html
@@ -7,7 +7,7 @@
     <h1>Task 4</h1>
     <script>
       // Convert all the strings to title caps in a string array anonymous 
-     let newstr= function (str) {
+     let newstr = function (str) {
                     str = str.toLowerCase().split(' ');
                     for (var i = 0; i < str.length; i++) {
                       str[i] = str[i].charAt(0).toUpperCase() + str[i].slice(1); 
@@ -15,7 +15,7 @@
                     return str.join(' ');
                   }
 
-                  newstr("MUDRA IS MY NAME");
+                  newstr("Hi my name is Dinesh Kupendran .");
 
     </script>
   </body>
