--- a/Task/Task 4/index2b.html
+++ b/Task/Task 4/index2b.html
@@ -6,8 +6,8 @@
   <body>
     <h1>Task 4</h1>
     <script>
-      // Convert all the strings to title caps in a string array anonymous 
-     let newstr = function (str) {
+      // Convert all the strings to title caps in a string array IIFE  
+     (function (str) {
                     str = str.toLowerCase().split(' ');
                     for (var i = 0; i < str.length; i++) {
                       str[i] = str[i].charAt(0).toUpperCase() + str[i].slice(1); 
@@ -15,7 +15,7 @@
                     return str.join(' ');
                   }
 
-                  newstr("Hi my name is Dinesh Kupendran");
+                 )("Hi my name is Dinesh Kupendran");
 
     </script>
   </body>
