--- a/Task/Task 4/index2a.html
+++ b/Task/Task 4/index2a.html
@@ -12,10 +12,10 @@
                     for (var i = 0; i < str.length; i++) {
                       str[i] = str[i].charAt(0).toUpperCase() + str[i].slice(1); 
                     } 
-                    return str.join(' ');
+                    console.log(str.join(' '));
                   }
-
-                  newstr("Hi my name is Dinesh Kupendran");
+                  newstr("Hi my name is DinEsh Kupendran");
+      
 
     </script>
   </body>
