--- a/Task/Task 4/index2b.html
+++ b/Task/Task 4/index2b.html
@@ -12,7 +12,7 @@
                     for (var i = 0; i < str.length; i++) {
                       str[i] = str[i].charAt(0).toUpperCase() + str[i].slice(1); 
                     } 
-                    return str.join(' ');
+                    console.log(str.join(' '));
                   }
 
                  )("Hi my name is Dinesh Kupendran");
