--- a/Task/Task 4/index3b.html
+++ b/Task/Task 4/index3b.html
@@ -6,15 +6,15 @@
   <body>
     <h1>Task 4</h1>
     <script>
-      // Sum of all numbers in an array  anonymous 
-     let newarr = function(array){
+      // Sum of all numbers in an array  IIFE 
+     (function(array){
                   var sum = 0;
                   for(var i = 0 ; i< array.length ; i++){
                      sum = sum + array[i];
                    }
                    console.log(sum);
                 }
-                  newarr([1,2,3,4,5,6,7,8,9,10]);
+              )([1,2,3,4,5,6,7,8,9,10]);
 
     </script>
   </body>
